bug #3871, fix NPEs and also some other code cleanup